[tool.poetry]
name = "fourier"
version = "1.0.0"
description = "An interactive visualization of the Fourier transform"
authors = ["Daniel Pechersky <danny.pechersky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
